# theStrategy

./: .gitignore  README.md  cmake_gcc_build_run.bat  cmake_vs10_x64.bat  cmake_vs_build_run.bat
assets/: cursor_mouse.tga  cursor_mouse_down.tga  gui_bw.tga  gui_down.tga  gui_over.tga  gui_stencil.tga  gui_stencil_inv.tga  mandrill.tga  mandrill_bw.tga  mandrill_cr.tga
cmake/: FindSDL2.cmake  macros.cmake
sdk/glew-1.11.0/: CMakeLists.txt
sdk/gwTGA-0.0.0/: CMakeLists.txt
sdk/gwTGA-0.0.0/include/: gwTGA.h
sdk/gwTGA-0.0.0/src/: gwTGA.cpp
source/: CMakeLists.txt  Main.cpp  common.h  glm.h
source/GLSL/: billboard.fp  billboard.geom  billboard.vp
source/Game/: Game.cpp  Game.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  World.cpp  World.h
source/Loaders/: ImageLoader.cpp  ImageLoader.h
source/Utils/: BinaryFile.h  BufferedBinaryFile.h  ConsoleBuffer.cpp  ConsoleBuffer.h  Font.cpp  Font.h  Geometry.h  Image.h  SafeCRT.cpp  SafeCRT.h  StringBuilder.h  TextFile.h
source/World/: Button.cpp  Button.h  CMakeLists.txt  Cursor.cpp  Cursor.h  Gui.cpp  Gui.h  Map.cpp  Map.h  SystemCursor.cpp  SystemCursor.h
